Mer presis logging av perioder som kan kastes